# derelict

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  tags
include/: BearLibTerminal.h  colors.h  gamestate.h  layers.h
include/ecs/: components.h  systems.h
include/mapping/: gen_utility.h  generators.h  map.h
include/screens/: dungeon.h  gamescreen.h  mainmenu.h  manager.h  screen.h  utility.h
lib/libfputs/: CMakeLists.txt  LICENSE  README.md
lib/libfputs/include/: binarytree.h  linkedlist.h  set.h  stack.h
lib/libfputs/src/: binarytree.c  linkedlist.c  set.c  stack.c
lib/libfputs/tests/: tests.c
resources/: colors
src/: colors.c  gamestate.c  main.c
src/ecs/: systems.c
src/mapping/: gen_utility.c  map.c
src/mapping/generators/: test.c
src/screens/: dungeon.c  gamescreen.c  mainmenu.c  manager.c  utility.c
